--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <marquee behavior="" onmouseover="stop()" direction=""></marquee>
     <script src="../src/index.js" type="text/jsx"></script>
   </body>
 </html>
